corrected alignment of about paragraph

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ a:hover {
     text-decoration: none;
 }
 
-p {
+h7 {
     position: absolute;
     bottom: 0;
 }
